data/derived/comb/progs/unify/prog8708.ml.out
Characters 72-76:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type 'a -> int
       but an expression was expected of type int
